# voxel-engine

./: CMakeLists.txt  Makefile  README.md  imgui.ini  run
lib/glfw/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
lib/glfw/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  particles  simple  splitview  wave
lib/glfw/src/: Makefile  cmake_install.cmake
lib/glfw/tests/: Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  joysticks  monitors  msaa  reopen  sharing  tearing  threads  timeout  title  windows
resources/shaders/: chunk_fragment.glsl  chunk_vertex.glsl  cube_fragment.glsl  cube_instanced_fragment.glsl  cube_instanced_vertex.glsl  cube_vertex.glsl  debug_line_fragment.glsl  debug_line_vertex.glsl  default_fragment.glsl  default_vertex.glsl  model.frag  model.vert  modelRefraction.frag  pbr_model.frag  postprocess.frag  terrain.frag  water.frag  water.vert
src/: config.h  includes.h  main.cpp
src/entities/: entity.h
src/entities/player/: player.cpp  player.h
src/graphics/: camera.cpp  camera.h  mesh.h  model.cpp  model.h  shader.cpp  shader.h  window.cpp  window.h
src/graphics/interactions/: aabb.h  raycast.h
src/graphics/platform/opengl/: indexBuffer.cpp  indexBuffer.h  vertexArray.cpp  vertexArray.h  vertexBuffer.cpp  vertexBuffer.h
src/graphics/render/: instancedArrayRenderer.cpp  instancedArrayRenderer.h  masterRenderer.cpp  masterRenderer.h  mesh.cpp  mesh.h
src/graphics/texture/: cubemap.cpp  cubemap.h  texture.cpp  texture.h  textureAtlas.cpp  textureAtlas.h
src/math/: noiseGenerator.cpp  noiseGenerator.h  ray.cpp  ray.h
src/renderers/: chunkRenderer.cpp  chunkRenderer.h  cubeRenderer.cpp  cubeRenderer.h  masterRenderer.cpp  masterRenderer.h  quadRenderer.cpp  quadRenderer.h
src/ui/: debugPane.cpp  debugPane.h  pane.cpp  pane.h  runtimePane.cpp  runtimePane.h
src/utils/: fileUtils.cpp  fileUtils.h  logger.cpp  logger.h  random.cpp  random.h  singleton.h  time.cpp  time.h  timer.cpp  timer.h
src/utils/loaders/: textureLoader.cpp  textureLoader.h
src/world/: chunk.cpp  chunk.h  chunkManager.cpp  chunkManager.h  world.cpp  world.h  worldConstants.h  worldGen.cpp  worldGen.h
src/world/block/: block.h  blockData.cpp  blockData.h  blockDatabase.cpp  blockDatabase.h  blockId.h  chunkBlock.cpp  chunkBlock.h
src/world/block/blockTypes/: blockType.cpp  blockType.h
src/world/chunk/: chunk.cpp  chunk.h  chunkMesh.cpp  chunkMesh.h  chunkMeshBuilder.cpp  chunkMeshBuilder.h  chunkSection.cpp  chunkSection.h  iChunk.h
